--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
-<div>
-  <h2>Log in to the system</h2>
-  <label for = "login">Your login:</label>
-  <input type = "text" name = "login" id = "login">
-  <br/>
-  <label for ="pass">Password:</label>
-  <input type"password" name = "pass" id="pass">
-  <br>
-  <button id="enter">Log in</button>
-  <img src="https://i.pinimg.com/originals/f4/ac/20/f4ac2048e1b9a4bb5ab89f56a499854f.jpg" width=100 style = "display:none" id = "Bulb"
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="index.css" />
+</head>
+<body>
+  <div>
+    <h2>Log in to the system</h2>
+    <label for = "login">Your login:</label>
+    <input type = "text" name = "login" id = "login">
+    <br/>
+    <label for ="pass">Password:</label>
+    <input type"password" name = "pass" id="pass">
+    <br>
+    <button id="enter">Log in</button>
+    <img src="https://i.pinimg.com/originals/f4/ac/20/f4ac2048e1b9a4bb5ab89f56a499854f.jpg" width=100 style = "display:none" id = "Bulb"
+  </div>
+</body>
+</html>
