--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" type="text/css" href="index.css" />
-  <script type="text/javasript" src="index.js".js"></script>
+  <script type="text/javasript" src="index.js" defer></script>
 </head>
 <body>
   <div>
