--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" type="text/css" href="index.css" />
-  <script type="text/javasript" src="index.js" defer></script>
+  
 </head>
 <body>
   <div>
@@ -17,7 +17,8 @@
     <input type"password" name = "pass" id="pass">
     <br>
     <button id="enter">Log in</button>
-    <img src="https://i.pinimg.com/originals/f4/ac/20/f4ac2048e1b9a4bb5ab89f56a499854f.jpg" width=100 style = "display:none" id = "Bulb"
+    <img src="https://i.pinimg.com/originals/f4/ac/20/f4ac2048e1b9a4bb5ab89f56a499854f.jpg" width=100 style = "display:none" id = "Bulb">
   </div>
+  <script type="text/javasript" src="index.js"></script>
 </body>
 </html>
