--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <button id="enter">Log in</button>
     <img src="https://i.pinimg.com/originals/f4/ac/20/f4ac2048e1b9a4bb5ab89f56a499854f.jpg" width=100 style = "display:none" id = "Bulb">
   </div>
-  <script type="text/javasript" src="index.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
